@@ -15,10 +15,12 @@ Supported flash chips (recognized automaticly by JEDEC ID):
 - EON EN25Q64 (8 MB, JEDEC ID: 1C 3017)*
 - Micron M25P64 (8 MB, JEDEC ID: 20 2017)
 - Windbond W25Q64 (8 MB, JEDEC ID: EF 4017)*
-- Macronix MX25L640 (8 MB, JEDEC ID: C2 2017)
+- Macronix MX25L64 (8 MB, JEDEC ID: C2 2017, C2 2617)
+- SST 25VF064C (8 MB, JEDEC ID: BF 254B)
 
 16 MiB:
 - Winbond W25Q128 (16 MB, JEDEC ID: EF 4018)*
+- Macronix MX25L128 (16 MB, JEDEC ID: C2 2018, C2 2618)
 
 * - tested
 
@@ -26,3 +28,4 @@ If you want to use other type, please contact with me: pepe2k@gmail.com
 
 More information about this project:
 http://www.tech-blog.pl/2013/03/29/zmodyfikowany-u-boot-dla-routerow-tp-link-z-atheros-ar9331-z-trybem-aktualizacji-oprogramowania-przez-www-i-konsola-sieciowa-netconsole/
+
