@@ -9,88 +9,6 @@ ifeq ($(BOARD), ap121)
 SOBJS	+= hornet_pll_init.o
 endif
 
-#added by zcf, this is specific to each product
-ifdef CONFIG_PID_MR302001
-CFLAGS += -DCONFIG_PID_MR302001=$(CONFIG_PID_MR302001)
-CFLAGS += -DGPIO_PHY_LED_BIT=$(GPIO_PHY_LED_BIT)
-CFLAGS += -DGPIO_INTERNET_LED_BIT=$(GPIO_INTERNET_LED_BIT)
-CFLAGS += -DGPIO_INTERNET_LED_ON=$(GPIO_INTERNET_LED_ON)
-CFLAGS += -DGPIO_JUMPSTART_LED_BIT=$(GPIO_JUMPSTART_LED_BIT)
-CFLAGS += -DGPIO_JUMPSTART_LED_ON=$(GPIO_JUMPSTART_LED_ON)
-CFLAGS += -DGPIO_WLAN_LED_BIT=$(GPIO_WLAN_LED_BIT)
-CFLAGS += -DGPIO_WLAN_LED_ON=$(GPIO_WLAN_LED_ON)
-CFLAGS += -DGPIO_RST_BUTTON_BIT=$(GPIO_RST_BUTTON_BIT)
-CFLAGS += -DNUM_OF_RJ45=$(NUM_OF_RJ45)
-CFLAGS += -DGPIO_RJ45_BASE=$(GPIO_RJ45_BASE)
-CFLAGS += -DGPIO_RJ45_ON=$(GPIO_RJ45_ON)
-endif
-
-ifdef CONFIG_PID_WR74104
-CFLAGS += -DCONFIG_PID_WR74104=$(CONFIG_PID_WR74104)
-CFLAGS += -DGPIO_PHY_LED_BIT=$(GPIO_PHY_LED_BIT)
-CFLAGS += -DGPIO_SYS_LED_BIT=$(GPIO_SYS_LED_BIT)
-CFLAGS += -DGPIO_SYS_LED_ON=$(GPIO_SYS_LED_ON)
-CFLAGS += -DGPIO_JUMPSTART_LED_BIT=$(GPIO_JUMPSTART_LED_BIT)
-CFLAGS += -DGPIO_JUMPSTART_LED_ON=$(GPIO_JUMPSTART_LED_ON)
-CFLAGS += -DGPIO_WLAN_LED_BIT=$(GPIO_WLAN_LED_BIT)
-CFLAGS += -DGPIO_WLAN_LED_ON=$(GPIO_WLAN_LED_ON)
-CFLAGS += -DNUM_OF_RJ45=$(NUM_OF_RJ45)
-CFLAGS += -DGPIO_RJ45_BASE=$(GPIO_RJ45_BASE)
-CFLAGS += -DGPIO_RJ45_ON=$(GPIO_RJ45_ON)
-endif
-
-ifdef CONFIG_PID_WR74302CN
-CFLAGS += -DCONFIG_PID_WR74302CN=$(CONFIG_PID_WR74302CN)
-CFLAGS += -DGPIO_SYS_LED_BIT=$(GPIO_SYS_LED_BIT)
-CFLAGS += -DGPIO_SYS_LED_ON=$(GPIO_SYS_LED_ON)
-CFLAGS += -DGPIO_JUMPSTART_LED_BIT=$(GPIO_JUMPSTART_LED_BIT)
-CFLAGS += -DGPIO_JUMPSTART_LED_ON=$(GPIO_JUMPSTART_LED_ON)
-CFLAGS += -DGPIO_INTERNET_LED_BIT=$(GPIO_INTERNET_LED_BIT)
-CFLAGS += -DGPIO_INTERNET_LED_ON=$(GPIO_INTERNET_LED_ON)
-CFLAGS += -DGPIO_WLAN_LED_BIT=$(GPIO_WLAN_LED_BIT)
-CFLAGS += -DGPIO_WLAN_LED_ON=$(GPIO_WLAN_LED_ON)
-CFLAGS += -DGPIO_RESET_FAC_BIT=$(GPIO_RESET_FAC_BIT)
-CFLAGS += -DGPIO_FAC_RST_HOLD_TIME=$(GPIO_FAC_RST_HOLD_TIME)
-CFLAGS += -DJUMPSTART_RST_MULTIPLEXED=$(JUMPSTART_RST_MULTIPLEXED)
-CFLAGS += -DGPIO_USB_POWER_SUPPORT=$(GPIO_USB_POWER_SUPPORT)
-CFLAGS += -DGPIO_USB_POWER_ON=$(GPIO_USB_POWER_ON)
-endif
-
-ifdef CONFIG_PID_MR322002
-CFLAGS += -DCONFIG_PID_MR322002=$(CONFIG_PID_MR322002)
-CFLAGS += -DGPIO_SYS_LED_BIT=$(GPIO_SYS_LED_BIT)
-CFLAGS += -DGPIO_SYS_LED_ON=$(GPIO_SYS_LED_ON)
-CFLAGS += -DGPIO_JUMPSTART_LED_BIT=$(GPIO_JUMPSTART_LED_BIT)
-CFLAGS += -DGPIO_JUMPSTART_LED_ON=$(GPIO_JUMPSTART_LED_ON)
-CFLAGS += -DGPIO_INTERNET_LED_BIT=$(GPIO_INTERNET_LED_BIT)
-CFLAGS += -DGPIO_INTERNET_LED_ON=$(GPIO_INTERNET_LED_ON)
-CFLAGS += -DGPIO_WLAN_LED_BIT=$(GPIO_WLAN_LED_BIT)
-CFLAGS += -DGPIO_WLAN_LED_ON=$(GPIO_WLAN_LED_ON)
-CFLAGS += -DGPIO_RESET_FAC_BIT=$(GPIO_RESET_FAC_BIT)
-CFLAGS += -DGPIO_FAC_RST_HOLD_TIME=$(GPIO_FAC_RST_HOLD_TIME)
-CFLAGS += -DJUMPSTART_RST_MULTIPLEXED=$(JUMPSTART_RST_MULTIPLEXED)
-CFLAGS += -DGPIO_USB_POWER_SUPPORT=$(GPIO_USB_POWER_SUPPORT)
-CFLAGS += -DGPIO_USB_POWER_ON=$(GPIO_USB_POWER_ON)
-endif
-
-ifdef CONFIG_PID_WR70301
-CFLAGS += -DCONFIG_PID_WR70301=$(CONFIG_PID_WR70301)
-CFLAGS += -DGPIO_SYS_LED_BIT=$(GPIO_SYS_LED_BIT)
-CFLAGS += -DGPIO_SYS_LED_ON=$(GPIO_SYS_LED_ON)
-CFLAGS += -DGPIO_RST_BUTTON_BIT=$(GPIO_RST_BUTTON_BIT)
-endif
-
-ifdef CONFIG_PID_MR11U01
-CFLAGS += -DCONFIG_PID_MR11U01=$(CONFIG_PID_MR11U01)
-CFLAGS += -DGPIO_JUMPSTART_LED_BIT=$(GPIO_JUMPSTART_LED_BIT)
-CFLAGS += -DGPIO_JUMPSTART_LED_ON=$(GPIO_JUMPSTART_LED_ON)
-CFLAGS += -DGPIO_INTERNET_LED_BIT=$(GPIO_INTERNET_LED_BIT)
-CFLAGS += -DGPIO_INTERNET_LED_ON=$(GPIO_INTERNET_LED_ON)
-CFLAGS += -DGPIO_RESET_FAC_BIT=$(GPIO_RESET_FAC_BIT)
-CFLAGS += -DGPIO_FAC_RST_HOLD_TIME=$(GPIO_FAC_RST_HOLD_TIME)
-CFLAGS += -DGPIO_USB_POWER_SUPPORT=$(GPIO_USB_POWER_SUPPORT)
-CFLAGS += -DGPIO_USB_POWER_ON=$(GPIO_USB_POWER_ON)
-endif
 $(LIB):	.depend $(OBJS) $(SOBJS)
 	$(AR) crv $@ $(OBJS) $(SOBJS)
 
