@@ -134,7 +134,7 @@
 	#define CFG_HZ					(400000000/2)
 
 	// CPU_DIV = 1, RAM_DIV = 1, AHB_DIV = 2
-	#define CPU_CLK_CONTROL_VAL1	0x00008004
+	#define CPU_CLK_CONTROL_VAL1	0x00018004
 	#define CPU_CLK_CONTROL_VAL2	0x00008000
 
 	// DIV_INT	= 32	(25 MHz * 32/2 = 400 MHz)
@@ -152,7 +152,7 @@
 	#define CFG_HZ					(412500000/2)
 
 	// CPU_DIV = 1, RAM_DIV = 1, AHB_DIV = 2
-	#define CPU_CLK_CONTROL_VAL1	0x00008004
+	#define CPU_CLK_CONTROL_VAL1	0x00018004
 	#define CPU_CLK_CONTROL_VAL2	0x00008000
 
 	// DIV_INT	= 33	(25 MHz * 33/2 = 412,5 MHz)
@@ -170,7 +170,7 @@
 	#define CFG_HZ					(425000000/2)
 
 	// CPU_DIV = 1, RAM_DIV = 1, AHB_DIV = 2
-	#define CPU_CLK_CONTROL_VAL1	0x00008004
+	#define CPU_CLK_CONTROL_VAL1	0x00018004
 	#define CPU_CLK_CONTROL_VAL2	0x00008000
 
 	// DIV_INT	= 34	(25 MHz * 34/2 = 425 MHz)
@@ -188,7 +188,7 @@
 	#define CFG_HZ					(500000000/2)
 
 	// CPU_DIV = 1, RAM_DIV = 2, AHB_DIV = 2
-	#define CPU_CLK_CONTROL_VAL1	0x00008404
+	#define CPU_CLK_CONTROL_VAL1	0x00018404
 	#define CPU_CLK_CONTROL_VAL2	0x00008400
 
 	// DIV_INT	= 40	(25 MHz * 40/2 = 500 MHz)
