@@ -1,3 +1,11 @@
+Jun 19 2013
+- fixed problem with booting in some cases on all supported models
+- support for TL-MR10U ver. 1.x (tested on ver. 1.0)
+- support fot TL-MR3220 ver. 2.x (tested on ver. 2.1)
+- support for TL-WR720N ver. 3 (only for Chinese version!)
+- support for new flash types/series: Macronix MX25L128 and SST 25VF064C
+- version for TL-WR740N v4 was tested also on TL-WR741ND ver. 4.2 (it's almost the same hardware)
+
 Apr 22 2013
 - support for TL-WR740N ver. 4 (tested on ver. 4.23)
 - NetConsole
@@ -10,3 +18,4 @@ Apr 22 2013
 
 Mar 29 2013
 - initial release
+
